# back

./: .pre-commit-config.yaml  README.md  dev.env  docker-compose.minio.yml  pyproject.toml  setup.cfg
back/: __init__.py  app.py  base_deps.py  router.py  scripts.py  settings.py  start.py
back/misc/: utils.py
back/routers/: auth.py  deps.py
back/routers/auth/: __init__.py  router.py
back/routers/chats/: router.py  schemas.py
back/routers/rooms/: router.py
back/schemas/: __init__.py  avatar.py
back/services/: __init__.py  expense_split.py  live_location.py  storage.py  watch_room.py  ws_manager.py  youtube_access.py
tests/: conftest.py
tests/integration/: test_auth.py  test_chats.py  test_health.py
