[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
core = { git = "https://gitlab.com/messenger910539/core.git", branch = "main" }


[tool.poetry.scripts]
start = "back.start:main"
dev = "back.start:dev"
