[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
core = { git = "https://github.com/spmessenger/core.git", branch = "main" }
mypy = "^1.18.2"
httpx = "^0.28.1"

pytest = "^8.4.2"
pytest-env = "^1.2.0"
pytest-asyncio = "^1.2.0"
python-dotenv = "1.1.1"
pre-commit = "^4.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.2.0"
pytest-asyncio = "^1.2.0"

[tool.poetry.scripts]
start = "back.start:main"
dev = "back.start:dev"
init_postgres = "back.scripts:init_tables"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"
env = [
    "DB_TYPE=postgresql",
    "DB_NAME=test",
]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "db.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "core.*"
ignore_missing_imports = true
